--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -165,7 +165,7 @@ header .social-icon li a
 /* start nagivation */
 .navbar-default
 	{
-		background: #fff;
+		background: #1e1b1b;
 		border: none;
 		box-shadow: none;
 		margin: 0 !important;
