--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -7,7 +7,7 @@ body
 	{
  		background: #8f4197;
  		color: #ffffff;
-		font-family: 'Open Sans', sans-serif;
+		font-family: quicksand-regular;
 		font-weight: 300;
 		overflow-x: hidden; /* prevent horizontal scrollbar from appearing */
 	}
@@ -129,6 +129,7 @@ h2 span
 /* start header */
 header
 	{
+		background: #212121;
 		min-height: 15px;
 		padding-top: 10px;
 		padding-bottom: 10px;
@@ -160,12 +161,17 @@ header .social-icon li a
 		line-height: 20px;
 		text-align: center;
 	}
+	ul.language li{
+		display: inline;	
+		text-decoration: none;
+	}
+
 /* end header */
 
 /* start nagivation */
 .navbar-default
 	{
-		background: #1e1b1b;
+		background: #3a3a3a;
 		border: none;
 		box-shadow: none;
 		margin: 0 !important;
@@ -173,12 +179,14 @@ header .social-icon li a
 
 .navbar-default .navbar-brand
 	{	
-	    color:#ffffff;
-		font-weight: 500;
-		font-size: 30px;
+		background: url('../images/logo.png') no-repeat;
+		width: 100px;
 		height: 70px;
-		line-height: 40px;
-		padding: 12px 0px 0px 12px;
+		line-height: 100px;
+		padding: 0px 0px 0px 0px;
+	}
+	.logo{
+		margin :5px;
 	}
 	.language{
 		display:inline;
@@ -188,7 +196,7 @@ header .social-icon li a
 .navbar-default .navbar-nav li a
 	{
 		font-weight: bold;
-		font-size: 15px;
+		font-size: 20px;
 		height: 70px;
 		line-height: 40px;
 		color: #fff; 
@@ -196,8 +204,8 @@ header .social-icon li a
 	a.fa.fa-facebook{
 		background: #3578E5;
 	}
-	a.fa.fa-youtube{
-		background:red;
+	a.fa.fa-envelope-o{
+		background :#efa758;
 	}
 	
 .navbar-default .navbar-nav > li > a.current { 
@@ -242,36 +250,35 @@ header .social-icon li a
 	}
 #home h1
 	{
-		font-weight: 300;
-		font-size: 70px;
+		font-family: "Comic Sans MS", cursive, sans-serif;
+		font-weight: bold;
+		font-size: 50px;
 		padding-bottom: 10px;
 	}
-#home .btn
+	#home .btn
 	{
-		-moz-box-shadow: 3px 4px 0px 0px #29bbff;
-	-webkit-box-shadow: 3px 4px 0px 0px #29bbff;
-	box-shadow: 3px 4px 0px 0px #29bbff;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #00a2ff), color-stop(1, #0688fa));
-	background:-moz-linear-gradient(top, #00a2ff 5%, #0688fa 100%);
-	background:-webkit-linear-gradient(top, #00a2ff 5%, #0688fa 100%);
-	background:-o-linear-gradient(top, #00a2ff 5%, #0688fa 100%);
-	background:-ms-linear-gradient(top, #00a2ff 5%, #0688fa 100%);
-	background:linear-gradient(to bottom, #00a2ff 5%, #0688fa 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00a2ff', endColorstr='#0688fa',GradientType=0);
-	background-color:#00a2ff;
-	-moz-border-radius:18px;
-	-webkit-border-radius:18px;
-	border-radius:18px;
-	border:1px solid #ffffff;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:24px;
-	font-weight:bold;
-	padding:13px 66px;
-	text-decoration:none;
-	text-shadow:3px 0px 8px #263666;
+		
+			background:url('../images/background_btn.jpg') no-repeat;
+			border-radius: 2px;
+			border-width: 3px;
+			color: #ffffff;
+			font-size: 25px;
+			font-weight: bold;
+			margin-top: 20px;
+			width: 300px;
+			height: 70px;
+			padding-top: 18px;
+			-webkit-transition: all 0.4s ease-in-out;
+			transition: all 0.4s ease-in-out;
+		
+	}
+	#home .dangky{
+		padding-top:300px;
+	}
+#home .btn:hover
+	{
+		background: #28a7e9;
+		border-color: transparent;
 	}
 	#thongtinthem .myButton2 span{
 		color:red;
@@ -288,18 +295,7 @@ header .social-icon li a
 .btndk{
 	text-align:center;
 }
-#home .btn:hover
-	{
-		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #00a2ff));
-	background:-moz-linear-gradient(top, #0688fa 5%, #00a2ff 100%);
-	background:-webkit-linear-gradient(top, #0688fa 5%, #00a2ff 100%);
-	background:-o-linear-gradient(top, #0688fa 5%, #00a2ff 100%);
-	background:-ms-linear-gradient(top, #0688fa 5%, #00a2ff 100%);
-	background:linear-gradient(to bottom, #0688fa 5%, #00a2ff 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#00a2ff',GradientType=0);
-	background-color:#0688fa;
-	text-decoration:none;
-	}	
+
 	
 #home h1 span
 	{
@@ -693,6 +689,7 @@ img.img-responsive {
 		padding-bottom: 5px;
 		line-height: 35px;
 	}
+	
 }
 /* end 768 media quires */
 
