--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -7,8 +7,8 @@ body
 	{
  		background: #8f4197;
  		color: #ffffff;
-		font-family: quicksand-regular;
-		font-weight: 300;
+		 font-family: 'Nunito Sans';
+		font-weight: bold;
 		overflow-x: hidden; /* prevent horizontal scrollbar from appearing */
 	}
 	
@@ -196,11 +196,16 @@ header .social-icon li a
 .navbar-default .navbar-nav li a
 	{
 		font-weight: bold;
-		font-size: 20px;
+		font-size: 17px;
 		height: 70px;
 		line-height: 40px;
 		color: #fff; 
 	}
+	
+	li {
+    margin-left: 10px;
+}
+	
 	a.fa.fa-facebook{
 		background: #3578E5;
 	}
@@ -242,7 +247,7 @@ header .social-icon li a
 
 #home
 	{
-		background: url('../images/home-bg.jpg') no-repeat;
+		background: url('../images/anhbiamoi.jpg') no-repeat;
 		background-size: cover;
 		padding-top: 150px;
 		padding-bottom: 100px;
@@ -284,13 +289,14 @@ header .social-icon li a
 		color:red;
 	}
 	.btn-danger {
+    transform: skewX(-25deg);
     color: #fff;
-	width: 300px;
+    height: 60px;
+    width: 300px;
+    margin-left: -10px;
     font-weight: bold;
-    font-size: 20px;
-    border: 5px;
-    background-color: #f6332e;
-    border-color: #fafafa;
+    font-size: 25px;
+    background: url('../images/backgound_btn.jpg');
 }
 .btndk{
 	text-align:center;
@@ -712,3 +718,32 @@ img.img-responsive {
 
 }
 /* end 360 media quires */
+#countdown {
+	margin-top: -40px;
+	width: 100%;
+	}
+  label {
+	clear: both;
+	display: block;
+  }
+  #countdown span {
+	  border: 1px solid white;
+	background: #fc7a01;
+	color: #FFF;
+	font-size: 25px;
+	font-weight: bold;
+	text-align: center;
+	width: 25%;
+	display: block;
+	float: left;
+	border-right: 1px solid #FFF;
+  }
+  #countdown span:last-child {
+	border-right: 1px solid #313233;
+  }
+  #about{
+	background: url('../images/background_about.jpg') no-repeat;
+  }
+  #timer{
+	background: url('../images/background_about.jpg') no-repeat;
+  }
