--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -5,7 +5,7 @@ http://www.templatemo.com/preview/templatemo_450_awesome
 
 body
 	{
- 		background: #9c1fd1;
+ 		background: #fafafa;
  		color: #ffffff;
 		 font-family: 'Nunito Sans';
 		font-weight: bold;
@@ -29,7 +29,7 @@ h2
 	}	
 h2 span
 	{
-		color: #28a7e9;
+		color: #1c2334;
 		font-weight: bold;
 	}
 /* end h2 */
@@ -443,7 +443,7 @@ transition: all 0.4s ease-in-out;
 	}
 #service .active
 	{
-		background: #8f4197;
+	
 		padding: 40px;
 	}
 #service .fa
@@ -459,7 +459,7 @@ transition: all 0.4s ease-in-out;
 	}
 #service h4
 	{
-		color: #28a7e9;
+		color: #1c2334;
 		font-weight: 600;
 		padding-top: 10px;
 		padding-bottom: 14px;
@@ -802,6 +802,8 @@ img.img-responsive {
 		padding-bottom: 100px;
 		min-height: 600px;
 	}
-
+	.background_center{
+		background: #ffffff;
+	}
 
 	
