--- a/css/style_2019.css
+++ b/css/style_2019.css
@@ -686,7 +686,8 @@ button:focus,
 }
 
 .form-marathon{
-	padding: 50px 0px;
+	padding-top: 25px;
+	/* padding: 20px 0px; */
 	background-color: #7004ba;
 }
 
