--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -810,10 +810,24 @@ img.img-responsive {
 /* end 360 media quires */
 
 /* start 768 media quires */
-@media only screen and ( max-width: 767px ) {
+@media only screen and (max-width: 767px) {
 	#about{
 		width:100%;
 	}
+
+section#about {
+    min-height: 0px;
+}
+
+section#register .btn {
+    font-size: 5px;
+    margin: 0 0 0 0;
+    margin-top: -30px;
+}
+
+section#register {
+    margin-left: -30px;
+}
 	#video{
 		width:100%;
 	}
@@ -824,9 +838,46 @@ img.img-responsive {
 	#discount{
 		width:100%;
 	}
+
+	#discount .student-price {
+	    width:30%;
+		font-size: 35px;
+		text-align: center;
+		background-color: #4285f4;
+		color: #fff;
+	}
+	#discount .btn{
+		
+		font-size:22px;
+	
+	}
+	#discount .ticket-student{
+		width:70%;
+	   display: flex;
+		justify-content: space-between;
+		align-items: center;
+		font-family: opensand-extrabold;
+		text-align: center;
+		font-size: 20px;
+		background: linear-gradient( rgba(255,255,255, 0.7), rgba(255,255,255, 0.7) ), url(../images/bg-ticket.png);
+		background-size: contain;
+		background-position: center;
+		box-shadow: 0 3px 6px rgba(0,0,0,0.1), 0 3px 6px rgba(0,0,0,0.11);}
+	
+	#discount{
+		padding-top:40px;
+	}
+	
+	#discount .ticket-student b {
+		color: #4285f4;
+		padding: 50px;
+	}
+
+
+
 	#edittimer p.thoigian{
-		padding:5px;
-		font-size:12px;
+		padding:50px;
+		font-size:1em;
 		font-weight: bold;
 	
 	}
@@ -836,30 +887,16 @@ img.img-responsive {
 
 
 	}
-
-	#countdown .days{
-	
-		font-size:20px;
-	
-	}
-	#countdown .hours{
-	
-		font-size:10px;
-	
-	}
-	#countdown .minutes{
-
-		font-size:10px;
-	
-	}
-	#countdown .seconds{
-	
-		font-size:10px;
-	
-	}
-
 	#edittimer .timerphai{
 		width:30%;
+	}
+	#countdown{
+
+		display:none;
+	}
+	.thoigian{
+		margin-bottom:10px;
+		margin-left:-1px;
 	}
 
 	
@@ -1007,11 +1044,15 @@ img.img-responsive {
 #about
 	{
 		
-		background: url('../images/about.jpg') no-repeat;
-		background-size: 100%;
-		padding-top: 150px;
-		padding-bottom: 100px;
-		min-height: 600px;
+background: url('../images/about.jpg') no-repeat;
+		
+background-size: 100%;
+		
+padding-top: 150px;
+		
+padding-bottom: 100px;
+		
+min-height: 600px;
 	}
 	.background_center{
 		background: #ffffff;
