--- a/en/css/templatemo-style.css
+++ b/en/css/templatemo-style.css
@@ -311,8 +311,8 @@ header .social-icon li a
 /* start nagivation */
 .navbar-default
 	{
-		background: #3a3a3a;
-		border: none;
+		background: #ffffff;
+		border: 1px solid #8c08ff;
 		box-shadow: none;
 		margin: 0 !important;
 	}
@@ -339,8 +339,12 @@ header .social-icon li a
 		font-size: 17px;
 		height: 70px;
 		line-height: 40px;
-		color: #fff;
+		color: #000000;
 	}
+
+.navbar-default .navbar-nav li a:hover {
+    color: blue;
+}
 	
 	li {
     margin-left: 10px;
